<resources>
    <string name="app_name">Narrative Service Sync</string>

    <!-- Strings related to login -->

    <string name="desc_narrative_Auth">For downloading photo from Narrative Service, Authentication is required. Click and authorize this application.</string>
    <string name="desc_narrative_Btn">Authentication on Narrative Service.</string>
    <string name="desc_google_Btn">Authorization on google Account.</string>
    <string name="desc_enable_resync_oncel">Enable to synchronized on  cellular network.</string>
    <string name="desc_enable_resync_tolocal">Enable to download to local storage. Turing on is not recommended, cellular phone storage volume is not so large.</string>
    <string name="desc_Sync_Btn">Start to sync.</string>
    <string name="desc_StopSync_Btn">Stop to sync.</string>
    <string name="desc_Resync_need">Token of Narrative service is already expired. Please authenticate again on Narrative Service.</string>
    <string name="desc_StorageFreeSpace_need">For using this application, more than 1GB free space is needed.</string>
    <string name="guide_local_storagepath">Application Local Folder:\n </string>
    <string name="guide_dcim_storagepath">DCIM Folder:\n </string>
    <string name="guide_pic_storagepath">Picture Folder:\n </string>
    <string name="guide_local_gotolocal">Go to download folder.</string>
    <string name="desc_enable_google_photo">Enable to synchronized to google photo of specified google account. If you enable this option and turn off downloading to local storage, photo data will be uploaded to Google Photo and not be stored on local storage (except data cache). If you enable downloading to local storage, you do not need to enable this option, Android will automatically upload to Google Photo of your account.</string>
    <string name="desc_cancel_Auth_google">For uploading photo to google photo, Authenticating google account is needed.</string>
    <string name="desc_enable_nas">Enable to resynchronized to network attached storage.</string>
    <string name="guide_local_setaccount">Register account</string>
    <string name="guide_account_name">Account Name: </string>
    <string name="desc_energy_charging">[Notice] While charging battery only , synchronization service will be executed </string>

    <string name="prompt_email">User ID</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
