<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <!-- Login progress -->

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/desc_narrative_Auth"
                android:id="@+id/desc_narrative_textView"
                android:textColor="@color/font" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc_narrative_Btn"
                android:id="@+id/narrative_authorize_button"
                android:layout_gravity="center_horizontal" />





            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="center_horizontal" />



            <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc_enable_resync_oncel"
                android:id="@+id/enable_cell_switch"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_gravity="center_horizontal" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_gravity="center_horizontal" />

            <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/desc_enable_resync_tolocal"
                android:id="@+id/enable_local_swicth" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_gravity="center_horizontal" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/guide_local_storagepath"
                android:textColor="@color/font"
                android:id="@+id/localpath_lbl" />
            <Button
                android:id="@+id/localfolder_btn"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guide_local_gotolocal"
                android:textStyle="bold" />


            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_gravity="center_horizontal" />

            <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/desc_enable_google_photo"
                android:id="@+id/enable_google_switch" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc_google_Btn"
                android:id="@+id/google_authorizeBtn"
                android:layout_gravity="center_horizontal" />


            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_gravity="center_horizontal" />




        </LinearLayout>
    </ScrollView>


</LinearLayout>
